1.11 (unreleased)
=================

- Nothing changed yet.


1.10 (2014-01-11)
=================

- #77: Change semantics of ``jinja2.bytecode_caching`` setting.  The new
  default is false (no bytecode caching) — ``bytecode_caching`` must
  explicitly be set to true to enable a filesystem bytecode cache.
  In addition, an atexit callback to clean the cache is no longer
  registered (as this seemed to defeat most of the purpose of having
  a bytecode cache.)  Finally, a more complex bytecode cache may be
  configured by setting ``jinja2.bytecode_caching`` directly to a
  ``jinja2.BytecodeCache`` instance.  (This can not be done in a
  paste .ini file, it must be done programatically.)
  [dairiki]

- prevent error when using `python setup.py bdist_wheel`
  [msabramo]


1.9 (2013-11-08)
================

- fix indentation level for Jinja2ProjectTemplate in scaffolds/__init__.py
  [Bruno Binet]

- Remove unnecessary dependency on ``pyramid.interfaces.ITemplateRenderer``
  which was deprecated in Pyramid 1.5.
  [mmerickel]

- #68: Added `model_path_filter`, `route_path_filter` and `static_path_filter` filters
  [Remco]

- #74: Fixed issue with route being converted as_const by jinja2 engine when using btyecode cache
  [Remco]


1.8 (2013-10-03)
================

- #70: Do not pin for py3.2 compatibility unless running under py3.2
  [dairiki]


1.7 (2013-08-07)
================

- #56: python3.3: Non-ASCII characters in changelog breaks pip installation
  [Domen Kožar]

- #57: Remove useless warning: `DeprecationWarning: reload_templates setting
  is deprecated, use pyramid.reload_templates instead.`
  [Marc Abramowitz]


1.6 (2013-01-23)
================

- Set `jinja2.i18n.domain` default to the package name
  of the pyramid application.
  [Domen Kožar]

- Add `jinja2.globals` setting to add global objects into 
  the template context
  [Eugene Fominykh]

- Add `jinja2.newstyle` setting to enable newstyle gettext calls
  [Thomas Schüßler]

1.5 (2012-11-24)