@@ -1,0 +1,3 @@
+baz1
+{% block baz1_body %}
+{% endblock baz1_body %}
