@@ -1,0 +1,2 @@
+{% extends 'base.jinja2' %}
+{% block baz1_body %}baz1 body{% endblock baz1_body %}
