@@ -1,0 +1,4 @@
+baz2
+{% block baz2_body %}
+baz1 foo
+{% endblock baz2_body %}
