@@ -1,0 +1,2 @@
+{% extends 'base.jinja2' %}
+{% block baz2_body %}baz2 body{% endblock baz2_body %}
